--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -253,7 +253,7 @@ img .fade-img:after {
 .favicon {
     width: .75em;
     height: .75em;
-    margin-right: .1em;
+    margin-right: .16em;
     vertical-align: 25%;
     filter: saturate(40%);
     margin-bottom: -.07em;
